Switch to Collectors.toList to fix searchResult Redis deserialization